Fixing the overlapping of latex equations with the navbar

--- a/notes/machine_learning/dichotomy/stylesheet.css
+++ b/notes/machine_learning/dichotomy/stylesheet.css
@@ -60,6 +60,7 @@ nav {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position : fixed; /* Make it stick, even on scroll */
     width: 100%;
+    z-index: 100;
 }
 
 nav a {
